// LINT: LEGACY_NAMES
/*
 *  Copyright 2019 Google Inc. All Rights Reserved.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

syntax = "proto2";

package goosci;

option java_package = "com.google.android.apps.forscience.whistlepunk.data";
option java_outer_classname = "GoosciLocalSyncStatus";
option objc_class_prefix = "GSJ";
option optimize_for = LITE_RUNTIME;

// The sync status of every locally known experiment.
message LocalSyncStatus {
  repeated ExperimentStatus experimentStatus = 1;
  // The last version of the ExperimentLibrary that we have synced.
  optional int64 lastSyncedLibraryVersion = 2;
}

// The sync status of a single experiment.
message ExperimentStatus {
  // The Experiment ID.
  optional string experimentId = 1;
  // Whether or not the experiment has any local changes.
  optional bool dirty = 2;
  // The last synced version from Drive/
  optional int64 lastSyncedVersion = 3;
  // The status we last saw on drive for whether or not the experiment is
  // archived.
  optional bool serverArchived = 4;
  // Whether or not the experiment is locally downloaded.
  optional bool downloaded = 5;
}
